--- a/livraria/src/main/resources/application.properties
+++ b/livraria/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Para o Hibernate atualizar o banco quando necessário
 spring.jpa.hibernate.ddl-auto = update
+server=8081
