Adicionada pagina usuario.html modicações no java script

--- a/livraria/src/main/resources/application.properties
+++ b/livraria/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Para o Hibernate atualizar o banco quando necessário
 spring.jpa.hibernate.ddl-auto = update
-server=8081
+server.port=8081
