Tentativa falha de salvar dados no banco e no js

--- a/livraria/src/main/resources/application.properties
+++ b/livraria/src/main/resources/application.properties
@@ -1,6 +1,6 @@
  
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/Livraria
+spring.datasource.url=jdbc:postgresql://localhost:5432/livraria
 spring.datasource.username=postgres
 spring.datasource.password=postgre
 
